# ros_opencl_caffe

./: README.md
opencl_caffe/: CMakeLists.txt  mainpage.dox  nodelet_plugins.xml  package.xml  rosdoc.yaml
opencl_caffe/include/opencl_caffe/: detector.h  detector_gpu.h  nodelet.h  srv.h
opencl_caffe/src/: detector_gpu.cpp  nodelet.cpp  srv.cpp
opencl_caffe/srv/: Inference.srv
opencl_caffe/tests/: detector.test  service.test  unittest_detector.cpp  unittest_srv.cpp
opencl_caffe_launch/: CMakeLists.txt  package.xml
opencl_caffe_launch/launch/: kinect_viewer.launch  opencl_caffe_nodelet.launch  opencl_caffe_srv.launch  realsense_viewer.launch  usb_cam_viewer.launch
opencl_caffe_launch/launch/includes/: default.yaml  manager.launch  nodelet.launch  service.launch  viewer.launch
opencl_caffe_viewer/: CMakeLists.txt  package.xml
opencl_caffe_viewer/src/: opencl_caffe_viewer.cpp
