<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package>
  <name>opencl_caffe</name>
  <version>0.3.0</version>
  <description>The ros wrapper for OpenCL Caffe</description>
  <author email="xiaochengx.dong@intel.com">Xiaocheng Dong</author>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>

  <license>Apache 2.0</license>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rostest</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>
