<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package>
  <name>opencl_caffe_launch</name>
  <version>0.3.0</version>
  <description>The opencl_caffe launch package</description>
  <author email="xiaochengx.dong@intel.com">Xiaocheng Dong</author>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>realsense_ros_camera</build_depend>
  <build_depend>opencl_caffe</build_depend>
  <build_depend>opencl_caffe_viewer</build_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>realsense_ros_camera</run_depend>
  <run_depend>opencl_caffe</run_depend>
  <run_depend>opencl_caffe_viewer</run_depend>
</package>
